# QuickIntroToMachineLearning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
.claude/agents/: ml-expert-reviewer.md  pedagogy-reviewer.md
docs/: STATE.md  WORKFLOW.md  common_errors.md  course_map.md  notebook_template.md
docs/plans/: 00_GettingStarted__01_what_is_ml.md  00_GettingStarted__02_features_and_feature_space.md  00_GettingStarted__03_look_before_you_model.md  00_GettingStarted__04_generalize_dont_memorize.md  00_GettingStarted__05_first_classifier_nearest_centroid.md  00_GettingStarted__06_accuracy_and_baseline.md  00_GettingStarted__07_confusion_matrix_precision_recall.md  00_GettingStarted__08_scores_thresholds_roc.md  00_GettingStarted__09_overfitting_generalization_gap.md  00_GettingStarted__10_cross_validation.md  00_GettingStarted__11_preprocessing_leakage.md  01_KNN__01_neighbourhood_vote.md  01_KNN__02_distance_and_scale.md  01_KNN__03_the_k_dial.md  01_KNN__04_estimator_and_parameters.md  01_KNN__05_demanding_case_curse.md  01_KNN__06_advanced_distances_and_k.md  02_NaiveBayes__01_bayes_from_counts.md  02_NaiveBayes__02_naive_assumption.md  02_NaiveBayes__03_gaussian_likelihood_logspace.md  02_NaiveBayes__04_estimators_and_parameters.md  02_NaiveBayes__05_text_classification.md  03_LogisticRegression__01_score_to_probability.md  03_LogisticRegression__02_boundary_and_weights.md  (+70 more)
scripts/: check_no_hardcoded_hex.py  gen_llms_txt.py  vendor_fashion_mnist.py  vendor_penguins.py
tests/: test_datasets.py  test_torch_determinism.py  test_viz.py
(+84 files in other folders)
